--- a/Leejeonghyuk/portfolio/src/styles/SkillsStyle.css
+++ b/Leejeonghyuk/portfolio/src/styles/SkillsStyle.css
@@ -3,13 +3,13 @@
   height: 100vh;
   background-color: #f1f1f1;
   color: #3a3a3a;
-  display: flex;
+  display: inline-block;
   width: 100%;
 }
 
 .skillTitle {
     padding: 50px;
-    font-size: 2em;
+    font-size: 3em;
 }
 
 .icons {
@@ -21,11 +21,21 @@
 .skill {
   text-align: center;
   margin-top: 100px;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+
 }
 
-.skillBox {
-
-    border: 1px solid black;
+.skillBox {display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    width: 100px;
+    height: fit-content;
+    border: 1px solid gray;
 }
 
 .skillName {
