이것저것 여러가지...

--- a/Leejeonghyuk/portfolio/src/styles/SkillsStyle.css
+++ b/Leejeonghyuk/portfolio/src/styles/SkillsStyle.css
@@ -26,16 +26,16 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-
 }
 
-.skillBox {display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-    width: 100px;
-    height: fit-content;
-    border: 1px solid gray;
+.skillBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  width: 100px;
+  height: fit-content;
+  border: 1px solid gray;
 }
 
 .skillName {
