--- a/Leejeonghyuk/portfolio/src/styles/ProfileStyle.css
+++ b/Leejeonghyuk/portfolio/src/styles/ProfileStyle.css
@@ -54,6 +54,7 @@ body {
   text-align: center;
   padding: 8px;
   margin: 8px;
+  cursor: pointer;
 }
 
 .urls:hover {
@@ -62,7 +63,7 @@ body {
 }
 
 .contact {
-  font-size: 2em;
+  font-size: 1em;
   color: #5e5e5e;
 }
 
