height -> min-height로 변경 및 블로그 주소 추가

--- a/Leejeonghyuk/portfolio/src/styles/ProfileStyle.css
+++ b/Leejeonghyuk/portfolio/src/styles/ProfileStyle.css
@@ -1,6 +1,6 @@
 .profileSection {
   margin: 0;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #ebebeb;
   color: #3a3a3a;
   display: flex;
