--- a/Leejeonghyuk/portfolio/src/styles/ProjectStyle.css
+++ b/Leejeonghyuk/portfolio/src/styles/ProjectStyle.css
@@ -1,6 +1,6 @@
 .projectSection {
     margin: 0;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #ebebeb;
     color: #3a3a3a;
     display: inline-block;
