--- a/Leejeonghyuk/portfolio/src/styles/SkillsStyle.css
+++ b/Leejeonghyuk/portfolio/src/styles/SkillsStyle.css
@@ -1,6 +1,6 @@
 .skillSection {
   margin: 0;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #f1f1f1;
   color: #3a3a3a;
   display: inline-block;
